--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -2,8 +2,8 @@
   <h1>MEAN Stack Application</h1>
   <p class="lead">Welcome to the MEAN Stack Application by <strong>David Acosta</strong></p>
   <div>
-    <a href="#" class="btn btn-primary">Register</a>
-    <a href="#" class="btn btn-default">Login</a>
+    <a routerLink="/register" class="btn btn-primary">Register</a>
+    <a routerLink="/login" class="btn btn-default">Login</a>
   </div>
 </div>
 
