--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -1,14 +1,20 @@
 <h1 class="page-header">REGISTER ROUTE</h1>
 
+<div class="row show-hide-message">
+  <div [ngClass]="messageClass">
+    {{ message }}
+  </div>
+</div>
+
 <form [formGroup]="form" (submit)="onRegisterSubmit()">
 
   <!-- Username Input -->
   <div class="form-group">
     <label for="username">Username</label>
-    <div [ngClass]="{'has-error': (form.controls.username.errors && form.controls.username.dirty),
-    'has-success': !form.controls.username.errors}">
-      <input type="text" name="username" class="form-control"
-      autocomplete="off" placeholder="*Username" formControlName="username" />
+    <div [ngClass]="{'has-error': (form.controls.username.errors && form.controls.username.dirty) || (!usernameValid && form.controls.username.dirty),
+    'has-success': !form.controls.username.errors && usernameValid}">
+      <input type="text" name="username" class="form-control" autocomplete="off"
+      placeholder="*Username" formControlName="username" (blur)="checkUsername()" />
       <!-- Validation -->
       <ul class="help-block">
         <li *ngIf="form.controls.username.errors?.required &&
@@ -17,6 +23,7 @@
         form.controls.username.errors?.maxlength && form.controls.username.dirty) && form.controls.username.dirty ">Minimum Character: 3, Maximum Character: 15</li>
         <li *ngIf="form.controls.username.errors?.validateUsername &&
         form.controls.username.dirty">Username must not have any special characters</li>
+        <li *ngIf="usernameMessage">{{usernameMessage}}</li>
       </ul>
     </div>
   </div>
@@ -24,10 +31,10 @@
   <!-- Email Input -->
   <div class="form-group">
     <label for="email">Email</label>
-    <div [ngClass]="{'has-error': (form.controls.email.errors && form.controls.email.dirty),
-    'has-success': !form.controls.email.errors}">
-      <input type="text" name="email" class="form-control"
-      autocomplete="off" placeholder="*Email" formControlName="email"/>
+    <div [ngClass]="{'has-error': (form.controls.email.errors && form.controls.email.dirty) || (!emailValid && form.controls.email.dirty),
+    'has-success': !form.controls.email.errors && emailValid}">
+      <input type="text" name="email" class="form-control" autocomplete="off"
+      placeholder="*Email" formControlName="email" (blur)="checkEmail()"/>
       <!-- Validation -->
       <ul class="help-block">
         <li *ngIf="form.controls.email.errors?.required && form.controls.email.dirty">This field is required</li>
@@ -35,7 +42,7 @@
         form.controls.email.errors?.maxlength && form.controls.email.dirty ) && form.controls.email.dirty">Minimum characters: 5, Maximum characters: 30</li>
         <li *ngIf="form.controls.email.errors?.validateEmail &&
         form.controls.email.dirty">This must be a valid e-mail</li>
-
+        <li *ngIf="emailMessage">{{emailMessage}}</li>
       </ul>
     </div>
   </div>
@@ -75,6 +82,6 @@
   </div>
 
   <!-- Submit Input -->
-  <input [disabled]="!form.valid" type="submit" class="btn btn-primary" value="Submit" />
+  <input [disabled]="!form.valid || processing || !emailValid || !usernameValid" type="submit" class="btn btn-primary" value="Submit" />
 
 </form>
