--- a/client/src/app/components/blog/blog.component.html
+++ b/client/src/app/components/blog/blog.component.html
@@ -1,5 +1,11 @@
 <h1 class="page-header">BLOG FEED</h1>
 
+<div class="row show-hide-message" *ngIf="message && newPost">
+  <div [ngClass]="messageClass">
+    {{ message }}
+  </div>
+</div>
+
 <button *ngIf="!newPost" (click)="newBlogForm()" type="button" name="button" class="btn btn-warning">
   New Post
 </button>
@@ -7,7 +13,39 @@
   <span class="glyphicon glyphicon-repeat"></span>&nbsp;&nbsp;Reload
 </button>
 
-<form [formGroup]="form" name="blogForm" (submit)="onBlogSubmit()">
+<form *ngIf="newPost" [formGroup]="form" name="blogForm" (submit)="onBlogSubmit()">
+  <div class="form-group">
+    <label for="title">Title</label>
+    <div [ngClass]="{'has-success': form.controls.title.valid,
+    'has-error': form.controls.title.dirty && form.controls.title.errors}">
+      <input type="text" name="title" class="form-control" placeholder="Blog Title"
+      autocomplete="off" formControlName="title" />
+      <ul class="help-block">
+        <li *ngIf="form.controls.title.dirty && form.controls.title.errors?.required">This field is required</li>
+        <li *ngIf="(form.controls.title.dirty && form.controls.title.errors?.minLength) ||
+        (form.controls.title.dirty && form.controls.title.errors?.maxLength)">Max length: 50, Min length: 5, </li>
+        <li *ngIf="form.controls.title.dirty && form.controls.title.errors?.alphaNumericValidation">Must be a letter or number</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="body">Body</label>
+    <div [ngClass]="{'has-success': form.controls.body.valid,
+    'has-error': form.controls.body.dirty && form.controls.body.errors}">
+      <textarea name="name" rows="8" cols="80" placeholder="Body"
+      class="form-control" formControlName="body"></textarea>
+      <ul class="help-block">
+        <li *ngIf="form.controls.body.dirty && form.controls.body.errors?.required">This field is required</li>
+        <li *ngIf="(form.controls.body.dirty && form.controls.body.errors?.minLength) ||
+        (form.controls.body.dirty && form.controls.body.errors?.maxLength)">Max length: 500, Min length: 5, </li>
+      </ul>
+    </div>
+  </div>
+
+  <button [disabled]="processing" type="button" name="button" (click)="goBack()" class="btn btn-warning">Go Back</button>
+  <button [disabled]="processing || !form.valid" type="submit" name="button" class="btn btn-success">Submit</button>
+
 </form>
 
 <div *ngIf="!newPost">
