--- a/client/src/app/components/blog/blog.component.html
+++ b/client/src/app/components/blog/blog.component.html
@@ -49,29 +49,30 @@
 </form>
 
 <div *ngIf="!newPost">
-  <div class="panel panel-primary">
+  <div class="panel panel-primary" *ngFor="let blog of blogPosts">
     <div class="panel-heading">
-      <h3 class="panel-title">Post title</h3>
+      <h3 class="panel-title">{{ blog.title }}</h3>
     </div>
     <div class="panel-body">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-      in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      {{ blog.body }}
     </div>
     <div class="panel-footer">
-      <strong>Posted by: </strong>gugui3z24
+      <strong>Posted by: </strong>{{ blog.createdBy }}
       <br />
-      <strong>Date: </strong>June 20, 2017
+      <strong>Date: </strong>{{ blog.createdAt | date: 'MMM dd, yyyy'}}
       <br />
-      <div>
-        <strong>Likes: </strong>25
+      <div *ngIf="username === blog.createdBy">
+        <strong>Likes: </strong>{{ blog.likes }}
         <br />
-        <strong>Dislikes: </strong>22
+        <strong>Dislikes: </strong>{{ blog.dislikes }}
       </div>
-      <a href="#"><button type="button" name="button" class="btn btn-sm btn-info">Edit</button></a>
-      <a href="#"><button type="button" name="button" class="btn btn-sm btn-danger">Delete</button></a>
+      <a [routerLink]="['/edit-blog/', blog._id]" *ngIf="username === blog.createdBy"><button type="button" name="button" class="btn btn-sm btn-info">Edit</button></a>
+      <a [routerLink]="['/delete-blog/', blog._id]"  *ngIf="username === blog.createdBy"><button type="button" name="button" class="btn btn-sm btn-danger">Delete</button></a>
       <div class="dropdown">
        <!-- Like Button -->
-       <button type="button" name="button" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-thumbs-up">&nbsp;</span>Likes: 21</button>
+       <button type="button" name="button" class="btn btn-sm btn-success" *ngIf="username !== blog.createdBy">
+         <span class="glyphicon glyphicon-thumbs-up">&nbsp;</span>Likes: 21
+       </button>
        <!-- Dropdown Menu Items -->
        <div class="dropdown-content">
          <a href="#">gugui3z24</a>
@@ -83,7 +84,9 @@
      <!-- Dislikes Dropdown  -->
      <div class="dropdown">
        <!-- Dislike Button -->
-       <button type="button" name="button" class="btn btn-sm btn-warning"><span class="glyphicon glyphicon-thumbs-down">&nbsp;</span>Dislikes: 15</button>
+       <button type="button" name="button" class="btn btn-sm btn-warning" *ngIf="username !== blog.createdBy">
+         <span class="glyphicon glyphicon-thumbs-down">&nbsp;</span>Dislikes: 15
+       </button>
        <!-- Dropdown Menu Items -->
        <div class="dropdown-content">
          <a href="#">gugui3z24</a>
